Fixed the reviews not being centered on Iphone 5

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1546,5 +1546,9 @@ footer{
     .hero-image-img{
         width:300px;
     }
+
+    .reviews-container{
+        padding:0;
+    }
 }
    
